public/analytics-pro/v0.10/_sources/reference/tmlt/analytics/_query_expr_compiler/_measurement_visitor_no_privacy/index.rst.txt
:orphan:

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


**************************************
_measurement_visitor_no_privacy
**************************************

.. py:module:: tmlt.analytics._query_expr_compiler._measurement_visitor_no_privacy

.. autoapi-nested-parse::

   Defines a visitor for creating non-noisy measurements from query expressions.











Classes
=======

.. list-table::

   * - :class:`.NoPrivacyMeasurementVisitor`
     - A visitor to create a measurement from a query expression.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NoPrivacyMeasurementVisitor(privacy_budget, stability, input_domain, input_metric, output_measure, default_mechanism, public_sources, catalog, table_constraints, enforce_keysets, enforce_clamping_bounds, enforce_constraints, enforce_flat_map_truncation, enforce_private_join_truncation)

   Bases: :class:`tmlt.analytics._query_expr_compiler._base_measurement_visitor.BaseMeasurementVisitor`

   A visitor to create a measurement from a query expression.



   .. list-table:: Methods

      * - :meth:`.visit_get_groups`
        - Create a measurement from a GetGroups query expression.
      * - :meth:`.build_groupby_count`
        - Build a measurement for a GroupByCount query.
      * - :meth:`.build_count_distinct_measurement`
        - Build a measurement for a GroupByCountDistinct query.
      * - :meth:`.build_groupby_quantile`
        - Build a Measurement for a GroupByQuantile query.
      * - :meth:`.build_groupby_bounded_sum`
        - Build a Measurement for a GroupByBoundedSum query.
      * - :meth:`.build_groupby_bounded_average`
        - Build a Measurement for a GroupByBoundedAverage query.
      * - :meth:`.build_groupby_bounded_variance`
        - Build a Measurement for a GroupByBoundedVariance query.
      * - :meth:`.build_groupby_bounded_stdev`
        - Build a Measurement for a GroupByBoundedStdev query.
      * - :meth:`.build_bound_selection_measurement`
        - Helper method to build a bound selection Measurement.
      * - :meth:`.visit_private_source`
        - Visit a PrivateSource query expression (raises an error).
      * - :meth:`.visit_rename`
        - Visit a Rename query expression (raises an error).
      * - :meth:`.visit_filter`
        - Visit a Filter query expression (raises an error).
      * - :meth:`.visit_select`
        - Visit a Select query expression (raises an error).
      * - :meth:`.visit_map`
        - Visit a Map query expression (raises an error).
      * - :meth:`.visit_flat_map`
        - Visit a FlatMap query expression (raises an error).
      * - :meth:`.visit_join_private`
        - Visit a JoinPrivate query expression (raises an error).
      * - :meth:`.visit_join_public`
        - Visit a JoinPublic query expression (raises an error).
      * - :meth:`.visit_replace_null_and_nan`
        - Visit a ReplaceNullAndNan query expression (raises an error).
      * - :meth:`.visit_replace_infinity`
        - Visit a ReplaceInfinity query expression (raises an error).
      * - :meth:`.visit_drop_null_and_nan`
        - Visit a DropNullAndNan query expression (raises an error).
      * - :meth:`.visit_drop_infinity`
        - Visit a DropInfinity query expression (raises an error).
      * - :meth:`.visit_enforce_constraint`
        - Visit a EnforceConstraint query expression (raises an error).
      * - :meth:`.visit_groupby_count`
        - Create a measurement from a GroupByCount query expression.
      * - :meth:`.visit_groupby_count_distinct`
        - Create a measurement from a GroupByCountDistinct query expression.
      * - :meth:`.visit_groupby_quantile`
        - Create a measurement from a GroupByQuantile query expression.
      * - :meth:`.visit_groupby_bounded_sum`
        - Create a measurement from a GroupByBoundedSum query expression.
      * - :meth:`.visit_groupby_bounded_average`
        - Create a measurement from a GroupByBoundedAverage query expression.
      * - :meth:`.visit_groupby_bounded_variance`
        - Create a measurement from a GroupByBoundedVariance query expression.
      * - :meth:`.visit_groupby_bounded_stdev`
        - Create a measurement from a GroupByBoundedStdev query expression.
      * - :meth:`.visit_get_bounds`
        - Create a measurement from a GetBounds query expression.




   .. automethod:: __init__
   .. py:method:: visit_get_groups(expr)

      Create a measurement from a GetGroups query expression.


   .. py:method:: build_groupby_count(input_domain, input_metric, stability, mechanism, budget, groupby, output_column)

      Build a measurement for a GroupByCount query.


   .. py:method:: build_count_distinct_measurement(input_domain, input_metric, mechanism, stability, budget, groupby, output_column)

      Build a measurement for a GroupByCountDistinct query.


   .. py:method:: build_groupby_quantile(input_domain, input_metric, measure_column, quantile, lower, upper, stability, budget, groupby, output_column)

      Build a Measurement for a GroupByQuantile query.


   .. py:method:: build_groupby_bounded_sum(input_domain, input_metric, measure_column, lower, upper, stability, mechanism, budget, groupby, output_column)

      Build a Measurement for a GroupByBoundedSum query.


   .. py:method:: build_groupby_bounded_average(input_domain, input_metric, measure_column, lower, upper, stability, mechanism, budget, groupby, output_column)

      Build a Measurement for a GroupByBoundedAverage query.


   .. py:method:: build_groupby_bounded_variance(input_domain, input_metric, measure_column, lower, upper, stability, mechanism, budget, groupby, output_column)

      Build a Measurement for a GroupByBoundedVariance query.


   .. py:method:: build_groupby_bounded_stdev(input_domain, input_metric, measure_column, lower, upper, stability, mechanism, budget, groupby, output_column)

      Build a Measurement for a GroupByBoundedStdev query.


   .. py:method:: build_bound_selection_measurement(input_domain, output_measure, d_out, bound_column, threshold, d_in)

      Helper method to build a bound selection Measurement.


   .. py:method:: visit_private_source(expr)
      :abstractmethod:

      Visit a PrivateSource query expression (raises an error).


   .. py:method:: visit_rename(expr)
      :abstractmethod:

      Visit a Rename query expression (raises an error).


   .. py:method:: visit_filter(expr)
      :abstractmethod:

      Visit a Filter query expression (raises an error).


   .. py:method:: visit_select(expr)
      :abstractmethod:

      Visit a Select query expression (raises an error).


   .. py:method:: visit_map(expr)
      :abstractmethod:

      Visit a Map query expression (raises an error).


   .. py:method:: visit_flat_map(expr)
      :abstractmethod:

      Visit a FlatMap query expression (raises an error).


   .. py:method:: visit_join_private(expr)
      :abstractmethod:

      Visit a JoinPrivate query expression (raises an error).


   .. py:method:: visit_join_public(expr)
      :abstractmethod:

      Visit a JoinPublic query expression (raises an error).


   .. py:method:: visit_replace_null_and_nan(expr)
      :abstractmethod:

      Visit a ReplaceNullAndNan query expression (raises an error).


   .. py:method:: visit_replace_infinity(expr)
      :abstractmethod:

      Visit a ReplaceInfinity query expression (raises an error).


   .. py:method:: visit_drop_null_and_nan(expr)
      :abstractmethod:

      Visit a DropNullAndNan query expression (raises an error).


   .. py:method:: visit_drop_infinity(expr)
      :abstractmethod:

      Visit a DropInfinity query expression (raises an error).


   .. py:method:: visit_enforce_constraint(expr)
      :abstractmethod:

      Visit a EnforceConstraint query expression (raises an error).


   .. py:method:: visit_groupby_count(expr)

      Create a measurement from a GroupByCount query expression.


   .. py:method:: visit_groupby_count_distinct(expr)

      Create a measurement from a GroupByCountDistinct query expression.


   .. py:method:: visit_groupby_quantile(expr)

      Create a measurement from a GroupByQuantile query expression.


   .. py:method:: visit_groupby_bounded_sum(expr)

      Create a measurement from a GroupByBoundedSum query expression.


   .. py:method:: visit_groupby_bounded_average(expr)

      Create a measurement from a GroupByBoundedAverage query expression.


   .. py:method:: visit_groupby_bounded_variance(expr)

      Create a measurement from a GroupByBoundedVariance query expression.


   .. py:method:: visit_groupby_bounded_stdev(expr)

      Create a measurement from a GroupByBoundedStdev query expression.


   .. py:method:: visit_get_bounds(expr)

      Create a measurement from a GetBounds query expression.







